# python-fide

./: README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: continuous_integration.yaml
python_fide/: __init__.py  _enums.py  _exceptions.py  _parsing.py  _typing.py  constants.py  enums.py  exceptions.py  pagination.py  parsing.py  type_raw.py  types.py  types_adapter.py  types_base.py
python_fide/clients/: _base.py  _player_async.py  _player_sync.py  base_client.py  event.py  fide_client.py  news.py  player.py  players.py  profile.py  profile_client.py  search.py  search_client.py  top_players.py
python_fide/clients_async/: __init__.py  base_client.py  event.py  news.py  player.py  search.py  top_players.py
python_fide/clients_sync/: __init__.py  base_client.py  event.py  news.py  player.py  search.py  top_players.py
python_fide/config/: _base.py  _player.py  base_config.py  event_config.py  news_config.py  player_config.py  players_config.py  profile_config.py  search_config.py  top_players_config.py
python_fide/constants/: common.py  periods.py  rating_cat.py
python_fide/endpoint/: base_endpoint.py  profile_endpoint.py  search_endpoint.py  top_players_endpoint.py
python_fide/pagination/: core_paginate.py
python_fide/parsing/: common_parsing.py  event_parsing.py  news_parsing.py  (+5 more)
requirements/: requirements.txt
tests/: common.py  common_players.py  test_async_fide_players.py  test_fide_events.py  test_fide_news.py  test_fide_players.py  test_fide_search.py  test_fide_top.py  test_sync_fide_players.py  test_utils.py  utils.py
(+50 files in other folders)
